--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -37,3 +37,11 @@
 	pages = "593--610",
 	year = "1946",
 }
+
+@book{basic_cat,
+	author = "Tom Leinster",
+	title = "{Basic category theory}",
+	publisher = "Cambridge University Press",
+	journal = {arXiv preprint arXiv:1612.09375},
+	year = {2016}
+}
